@@ -87,6 +87,7 @@
         <li><a href="hello.rpy.py">hello.rpy.py</a></li>
         <li><a href="simple.rtl">simple.rtl</a></li>
 	<li><a href="courier.py">courier.py</a></li>
+	<li><a href="rootscript.py">rootscript.py</a></li>
     </ul>
     
     <h2>Obsolete?</h2>
