@@ -19,6 +19,7 @@
 <li><a href="tap2deb.html"> tap2deb</a></li>
 <li><a href="tapconvert.html">tapconvert</a></li>
 <li><a href="twistd.html">twistd</a></li>
+<li><a href="websetroot.html">websetroot</a></li>
 </ul>
 
 </body></html>
