@@ -1,3 +1,8 @@
+2002-10-17  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* bin/websetroot twisted/scripts/websetroot.py: Added a program to set
+	the root of a web server after the tap exists
+
 2002-10-14  Moshe Zadka <moshez@twistedmatrix.com>
 
 	* twisted/web/vhost.py: add a virtual host monster to support twisted
